# mieles

./: .env  .env.example  .gitignore  datos.json  datos2.json  db.sqlite3  manage.py  pyproject.toml  requirements.txt
app_account/: backends.py  forms.py  urls.py  views.py
app_account/templates/registration/: confirmation_mail.html  fail_confirmation.html  login.html  password_reset_mail.html  register.html
app_main/: admin.py  apps.py  models.py  views.py
app_main/migrations/: 0001_initial.py  0002_initial.py  0003_alter_code_code.py
app_user/: admin.py  apps.py  forms.py  models.py  urls.py
app_user/migrations/: 0001_initial.py
mieles/: asgi.py  db.py  settings.py  urls.py  utils.py  wsgi.py
static/admin/css/: admin.css
static/admin/js/: admin.js
templates/: asd.html
